// Format:
// Date (mm/dd/yr)
// rNumber [Author]
// 	* Modifications.
// 	- Details.
//========================================

03/17/2010
	r259 [pakpil]
	* Fixed WM_VOICEOFSIREN that wasn't blocking use skills in the W/M under the skill effect.

	r258 [pakpil]
	* Added LG_BANISHINGPOINT skill.
	* Fixed WM_GREAT_ECHO skill damage type and SP reduction per W/M in party.
	* Fixed WL_FROSTMISTY and WL_JACKFROST casting, aftercast and cooldown time and Freezing/Freeze chances.
	* Fixed SC_FREEZING that don't affect to boss monsters.
	* Fixed WL_FROSTMISTY damage.
	* Fixed RK_SONICWAVE and RK_HUNDREDSPEAR damages.


03/15/2010
	r256 [pakpil]
	* Added missing 'breeder_3ceAM' npc in r253.
	
	r255 [pakpil]
	* Fixed WL_HELLINFERNO that was not working propertly.
	* Minor cleanup in skill_additional_effect.
	* Fixed a mistake in Thanatos Tower quest in r253. Sorry :/

	r254 [pakpil]
	* Fixed an issue in WL_READING_SB where it wasn't removing SC_STOP status when the Warlock haven't Spellbooks on the inventory.

	r253 [pakpil]
	* Fixed  some items that aren't given its bonus correctly to certain classes.
	* Fixed splash area in skill_db that were wrong. Can't remember the reporter's name, thx anyway.
	* Fixed WL_COMET adjusting its behavior to the official one.
	* Minor fix in WL_COMET and AB_ADORAMUS that should fails before cast them if you haven't requires gemstones when are casted alone.
	* Added check for 3rd jobs in Thanatos tower quest.
	* Added custom Breeder for 3rd jobs. Plz report any problem.

	r252 [pakpil]
	* Fixed an issue where the client freeze when use disguise. Bug report 252.

03/14/2010
	r251 [pakpil]
	* Fixed RA_ELECTRICSHOCKET that wasn't draining SP and wasn't traped all in 5x5 area.

	r250 [Jobbie]
	* Update skill cast time of some Rune Knight skills.

	r249 [Jobbie]
	* Corrected some items in item_db2.
	* Added NC_MAINFRAME, NC_SILVERSNIPER, NC_DISJOINT, GN_S_PHARMACY, GN_MIX_COOKING and GN_MAKEBOMB.