@@ -922,19 +922,57 @@ enum si_type {
 	SI_DEMONIC_FIRE = 466,
 	SI_FIRE_EXPANSION_SMOKE_POWDER = 467,
 	SI_FIRE_EXPANSION_TEAR_GAS = 468,
+//	SI_BLOCKING_PLAY = 469,
+//	SI_MANDRAGORA = 470,
+//	SI_ACTIVATE = 471,
 	SI_SECRAMENT = 472,
 //	SI_ASSUMPTIO_2 = 473,
 //	SI_TK_SEVENWIND =  474,
 //	SI_LIMIT_ODINS_RECALL =  475,
 //	SI_STOMACHACHE =  476,
-// 477 - 489
+//	SI_MYSTERIOUS_POWDER = 477,
+//	SI_MELON_BOMB = 478,
+//	SI_BANANA_BOMB_SITDOWN_POSTDELAY = 479,
+//	SI_PROMOTE_HEALTH_RESERCH = 480,
+//	SI_ENERGY_DRINK_RESERCH = 481,
+//	SI_EXTRACT_WHITE_POTION_Z = 482,
+//	SI_VITATA_500 = 483,
+//	SI_EXTRACT_SALAMINE_JUICE = 484,
+//	SI_BOOST500 = 485,
+//	SI_FULL_SWING_K = 486,
+//	SI_MANA_PLUS = 487,
+//	SI_MUSTLE_M = 488,
+//	SI_LIFE_FORCE_F = 489,
 	SI_VACUUM_EXTREME = 490,
-
-
+//	SI_SAVAGE_STEAK = 491,
+//	SI_COCKTAIL_WARG_BLOOD = 492,
+//	SI_MINOR_BBQ = 493,
+//	SI_SIROMA_ICE_TEA = 494,
+//	SI_DROCERA_HERB_STEAMED = 495,
+//	SI_PUTTI_TAILS_NOODLES = 496,
+//	SI_BANANA_BOMB = 497,
+//	SI_SUMMON_AGNI = 498,
 	SI_READING_SB_4 = 499,
 	SI_READING_SB_5 = 500,
 	SI_READING_SB_6 = 501,
 	SI_READING_SB_7 = 502,
+//	SI_ELEMENTAL_AGGRESSIVE = 503,
+//	SI_RETURN_TO_ELDICASTES = 504,
+//	SI_BANDING_DEFENCE = 505,
+//	SI_SKELSCROLL = 506,
+//	SI_DISTRUCTIONSCROLL = 507,
+//	SI_ROYALSCROLL = 508,
+//	SI_IMMUNITYSCROLL = 509,
+//	SI_MYSTICSCROLL = 510,
+//	SI_BATTLESCROLL = 511,
+//	SI_ARMORSCROLL = 512,
+//	SI_FREYJASCROLL = 513,
+//	SI_SOULSCROLL = 514,
+//	SI_ELEMENTAL_CONTROL = 515,
+//	SI_ELEMENTAL_WAIT = 516,
+//	SI_ELEMENTAL_PASSIVE = 517,
+//	SI_ELEMENTAL_DEFENSIVE = 518,
+
 };
 
 enum wl_spheres {
